finished about us section, and fixed the #home section clipping into other sections

--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,22 @@ input, select:focus{
 
 
 section{
-    height: 100vh;
+    /* height: 100vh; */
     display: block;
     width: 100%;
+}
+#home{
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: block;
 }
 .textwithimage{
     display: flex;
     align-items: center;
     margin-right: 440px;
     justify-content: center;
-    margin-top: 10em;   
+    margin-block: 10em;   
     font-family: 'Open Sans';
 }
 .text-and-buttons{
@@ -142,7 +148,8 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 #imagehomepage{
     position: absolute;
-    margin-left: 1050px;
+    margin-left: 1070px;
+    margin-bottom: 40px;
 
 }
 /* SEARCHBAR, TEXT, IMAGE END */
@@ -150,15 +157,16 @@ input[type="search"]::-webkit-search-cancel-button {
 /* SECTION 1 END */
 /* SECTION 2 START */
 #top-offer{
+    position: relative;
     background-color: #F3F3FA;
+    width: 100%;
     height: auto;
     display: block;
 }
 .text-sections{
-    margin-top: 200px;
     display: flex;
     justify-content: space-around;
-    margin-block-end: 50px;
+    margin-block: 10em;
 }
 .separator {
     border: 0;
@@ -197,7 +205,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /* SECTION 2 TXT END / START IMG */
 .image-grid-section2{
     display: grid;
-    margin-block-start: 200px;
+    margin-block: 200px;
     flex-direction: row;
     row-gap: 100px;
     align-items: center;
@@ -236,4 +244,34 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 #img-cont-city{
     color: #141B2D;
+}
+
+/* SECTION 2 END */
+/* SECTION 3 START */
+
+#aboutus{
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.aboutus-txt-img{
+    margin-block: 10em;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    
+}
+.aboutus-title-text{
+        margin-inline-start: 50px;
+}
+.aboutus-title{
+    font-size: 35px;
+    font-family: 'Merriweather';
+}
+.aboutus-paragraph p{
+    padding-block-start: 35px;
+    width: 330px;
+}
+#aboutus-2{
+    padding-block-start: 35px;
 }
